<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/holo_blue_light"
    tools:context=".MainActivity">

    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/layout_welcome"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">

            <ImageView

                android:id="@+id/welcome"
                android:layout_width="300dp"
                android:layout_height="200dp"
                app:srcCompat="@mipmap/ins" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/layout_welcome"
            android:orientation="vertical">

            <TextView
                android:id="@+id/prenom_client"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="@string/prenom_client" />

            <EditText
                android:id="@+id/prenom_editext"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:imeOptions="actionNext"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:inputType="text" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/layout1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/nom_client"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="@string/name_client" />

            <EditText
                android:id="@+id/name_editext"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:imeOptions="actionNext"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:inputType="text" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/layout2"
            android:orientation="vertical">

            <TextView
                android:id="@+id/adresse_client"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="@string/Adresse" />

            <EditText
                android:id="@+id/adresse_editext"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="20dp"
                android:imeOptions="actionNext"
                android:layout_marginRight="20dp"
                android:inputType="text" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/layout3"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tel_client"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="@string/tel" />

            <EditText
                android:id="@+id/tel_editext"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:imeOptions="actionNext"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:inputType="number" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/layout4"
            android:orientation="vertical">

            <TextView
                android:id="@+id/pseudo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="@string/Pseudo" />

            <EditText
                android:id="@+id/pseudo_editext"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="20dp"
                android:imeOptions="actionNext"
                android:layout_marginRight="20dp"
                android:inputType="text" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/layout5"
            android:orientation="vertical">

            <TextView
                android:id="@+id/password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="@string/passwd" />

            <EditText
                android:id="@+id/password_editext"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:imeOptions="actionDone"

                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:inputType="textPassword" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/layout5"
            android:orientation="horizontal"
            android:gravity="center_horizontal">

            <Button
                android:id="@+id/button_send"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_marginTop="50dp"
                android:text="S'inscrire" />

            <Button
                android:id="@+id/connexion"
                android:text="se connecter"
                android:layout_marginTop="50dp"
                android:layout_marginLeft="20dp"
                android:layout_width="150dp"
                android:layout_height="50dp"/>
        </LinearLayout>
        </LinearLayout>

    </ScrollView>
</RelativeLayout>