<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:background="@android:color/holo_blue_light"
    tools:context=".MainActivity">
    <LinearLayout
        android:id="@+id/layout_welcome"
        android:layout_width="match_parent"
        android:gravity="center_horizontal"
        android:layout_height="wrap_content">
        <ImageView

            android:id="@+id/welcome"
            app:srcCompat="@mipmap/newproduct"
            android:layout_width="300dp"
            android:layout_height="200dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout1"
        android:layout_below="@id/layout_welcome"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/nom_produit"
            android:text="@string/name_produit"
            android:layout_marginLeft="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/nomp_editext"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:imeOptions="actionNext"
            android:layout_width="match_parent"
            android:layout_height="40dp"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/layout2"
        android:layout_below="@id/layout1"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/price"
            android:text="@string/price"
            android:layout_width="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/p_editext"
            android:imeOptions="actionNext"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:inputType="number"
            android:layout_width="match_parent"
            android:layout_height="40dp"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/layout3"
        android:layout_below="@id/layout2"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/quantite1"
            android:text="@string/quantite"
            android:layout_width="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/q_editext"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:inputType="number"
            android:imeOptions="actionDone"
            android:layout_width="match_parent"
            android:layout_height="40dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_below="@id/layout2"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:layout_marginTop="50dp"
            android:id="@+id/button_send"
            android:text="ajouter"
            android:layout_width="150dp"
            android:layout_height="50dp"/>
    </LinearLayout>


</RelativeLayout>